index close to done

--- a/index.html
+++ b/index.html
@@ -13,5 +13,77 @@
         <span class="border"> Parallax Website BOI </span>
       </div>
     </div>
+
+    <section class="section section-light">
+      <h2>Section One</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+        voluptatem dolor quaerat libero commodi neque esse. Nisi ratione quas
+        odio alias, a asperiores neque veritatis nostrum non corrupti suscipit
+        minus quasi aliquid quod officia soluta dignissimos, placeat nobis dolor
+        autem porro doloremque! Ex maxime deleniti perspiciatis quisquam sint ea
+        aliquid earum consequuntur magni. Exercitationem ipsum, fugit quo
+        accusantium laudantium nostrum corrupti enim cupiditate aliquid, ducimus
+        aut, optio consectetur molestiae reiciendis. Impedit tempora dolor
+        excepturi ipsa soluta provident fugit animi nisi voluptatem esse
+        laboriosam, iste, dignissimos possimus tenetur alias laudantium debitis?
+        Numquam illo aspernatur adipisci temporibus ducimus sapiente voluptate
+        quasi quisquam?
+      </p>
+    </section>
+
+    <div class="pimg2">
+      <div class="ptext">
+        <span class="border"> IMG two text </span>
+      </div>
+    </div>
+
+    <section class="section section-dark">
+      <h2>Section two</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+        voluptatem dolor quaerat libero commodi neque esse. Nisi ratione quas
+        odio alias, a asperiores neque veritatis nostrum non corrupti suscipit
+        minus quasi aliquid quod officia soluta dignissimos, placeat nobis dolor
+        autem porro doloremque! Ex maxime deleniti perspiciatis quisquam sint ea
+        aliquid earum consequuntur magni. Exercitationem ipsum, fugit quo
+        accusantium laudantium nostrum corrupti enim cupiditate aliquid, ducimus
+        aut, optio consectetur molestiae reiciendis. Impedit tempora dolor
+        excepturi ipsa soluta provident fugit animi nisi voluptatem esse
+        laboriosam, iste, dignissimos possimus tenetur alias laudantium debitis?
+        Numquam illo aspernatur adipisci temporibus ducimus sapiente voluptate
+        quasi quisquam?
+      </p>
+    </section>
+
+    <div class="pimg3">
+      <div class="ptext">
+        <span class="border"> IMG three text </span>
+      </div>
+    </div>
+
+    <section class="section section-dark">
+      <h2>Section three</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
+        voluptatem dolor quaerat libero commodi neque esse. Nisi ratione quas
+        odio alias, a asperiores neque veritatis nostrum non corrupti suscipit
+        minus quasi aliquid quod officia soluta dignissimos, placeat nobis dolor
+        autem porro doloremque! Ex maxime deleniti perspiciatis quisquam sint ea
+        aliquid earum consequuntur magni. Exercitationem ipsum, fugit quo
+        accusantium laudantium nostrum corrupti enim cupiditate aliquid, ducimus
+        aut, optio consectetur molestiae reiciendis. Impedit tempora dolor
+        excepturi ipsa soluta provident fugit animi nisi voluptatem esse
+        laboriosam, iste, dignissimos possimus tenetur alias laudantium debitis?
+        Numquam illo aspernatur adipisci temporibus ducimus sapiente voluptate
+        quasi quisquam?
+      </p>
+    </section>
+
+    <div class="pimg1">
+      <div class="ptext">
+        <span class="border"> Parallax Website BOI </span>
+      </div>
+    </div>
   </body>
 </html>
