finished the website lol

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="pimg1">
       <div class="ptext">
-        <span class="border"> Parallax Website BOI </span>
+        <span class="border"> Viktor YOLO </span>
       </div>
     </div>
 
@@ -34,7 +34,7 @@
 
     <div class="pimg2">
       <div class="ptext">
-        <span class="border"> IMG two text </span>
+        <span class="border trans"> IMG two text </span>
       </div>
     </div>
 
@@ -58,7 +58,7 @@
 
     <div class="pimg3">
       <div class="ptext">
-        <span class="border"> IMG three text </span>
+        <span class="border trans"> IMG three text </span>
       </div>
     </div>
 
@@ -82,7 +82,7 @@
 
     <div class="pimg1">
       <div class="ptext">
-        <span class="border"> Parallax Website BOI </span>
+        <span class="border"> boi o boi this is cool </span>
       </div>
     </div>
   </body>
